# Tracking

./: .gitignore  CMakeLists.txt
include/: Detection.h  Gradient.h  HOG.h  HOGDescriptor.h  ImagePyramid.h  Line.h  NonMaxSuppression.h  PersonDetector.h  PersonTracker.h  SlidingWindow.h  Track.h  draw_new.h  hog.h  hoghistogram.h
src/: cam_sections.cpp  draw_new.cpp  hog.cpp  hoghistogram.cpp  main.cpp  train_svm.cpp
